--- a/app/src/main/res/layout/table_movie_item.xml
+++ b/app/src/main/res/layout/table_movie_item.xml
@@ -20,8 +20,7 @@
                 android:layout_marginStart="4dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.538">
+                app:layout_constraintTop_toTopOf="parent">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
@@ -29,8 +28,10 @@
 
                     <ImageView
                         android:id="@+id/film_image"
-                        android:layout_width="111dp"
-                        android:layout_height="151dp"
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        app:layout_constraintHeight_percent="0.7"
+                        app:layout_constraintWidth_percent="0.9"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.526"
@@ -41,8 +42,8 @@
 
                     <TextView
                         android:id="@+id/film_name"
-                        android:layout_width="113dp"
-                        android:layout_height="56dp"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
                         android:gravity="center"
                         android:text="TextView"
                         android:ellipsize="end"
