--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,23 +3,22 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/nav_home">
-
+    app:startDestination="@+id/moviesFragment">
     <fragment
-        android:id="@+id/nav_home"
-        android:name="com.example.movierating.presentation.ui.fragments.TableFragment"
-        android:label="@string/menu_home"
-        tools:layout="@layout/fragment_tabду" />
-
+        android:id="@+id/moviesFragment"
+        android:name="com.example.movierating.presentation.ui.fragments.moviesFragment.MoviesFragment"
+        android:label="MoviesFragment" >
+        <action
+            android:id="@+id/action_moviesFragment_to_detailsFragment"
+            app:destination="@id/detailsFragment"
+            app:popUpTo="@id/moviesFragment" />
+    </fragment>
     <fragment
-        android:id="@+id/nav_gallery"
-        android:name="com.example.movierating.presentation.ui.gallery.LinealFragment"
-        android:label="@string/menu_gallery"
-        tools:layout="@layout/fragment_lineal" />
-
-    <fragment
-        android:id="@+id/nav_slideshow"
-        android:name="com.example.movierating.presentation.ui.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
+        android:id="@+id/detailsFragment"
+        android:name="com.example.movierating.presentation.ui.fragments.DetailsFragment"
+        android:label="DetailsFragment" >
+        <argument
+            android:name="movie"
+            app:argType="com.example.movierating.data.internet.requestResults.moviesRequestResult.MovieResult" />
+    </fragment>
 </navigation>
